envoyfilter-teaching/envoyfilter/httpmatch/vs-match-withoutHeaders-bookinfo-exact.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - withoutHeaders:
        end-user:
          exact: mark
    route:
    - destination:
        host: productpage
        port:
          number: 9080
